--- a/webapp/view/InvoiceList.view.xml
+++ b/webapp/view/InvoiceList.view.xml
@@ -12,7 +12,8 @@
           type: 'sap.ui.model.type.Currency',
           formatOptions: {showMeasure: false}
         }"
-        numberUnit="{view>/currency}"/>
+        numberUnit="{view>/currency}"
+        numberState="{= ${invoice>ExtendedPrice} > 50 ? 'Error' : 'Success'}"/>
     </items>
   </List>
 </mvc:View>
