--- a/webapp/view/InvoiceList.view.xml
+++ b/webapp/view/InvoiceList.view.xml
@@ -2,10 +2,12 @@
   xmlns="sap.m"
   xmlns:mvc="sap.ui.core.mvc">
   <List id="invoiceList"
-    headerText="{i18n>invoiceListTitle}"
     class="sapUiResponsiveMargin"
     width="auto"
-    items="{invoice>/Invoices}">
+    items="{
+      path: 'invoice>/Invoices',
+      sorter: [{path: 'ShipperName', group: true}, {path: 'ProductName'}]
+    }">
     <headerToolbar>
       <Toolbar>
         <Title text="{i18n>invoiceListTitle}"/>
