--- a/webapp/view/HelloPanel.view.xml
+++ b/webapp/view/HelloPanel.view.xml
@@ -5,7 +5,8 @@
     class="sapUiResponsiveMargin"
     width="auto"
     expandable="{device>/system/phone}"
-    expanded="{= !${device>/system/phone} }">
+    expanded="{= !${device>/system/phone} }"
+    accessibleRole="Region">
     <content>
       <Button id="helloDialogButton"
         icon="sap-icon://world"
